Adding a small notube-y note

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Rqommend by Yves Raimond (developed as part of the NoTube European project)
+Rqommend by Yves Raimond (developed for the NoTube European project)
 
 Example output:
 
